--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,24 +1,26 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Items</h1>
-
-<table>
+<%- model_class = Item -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Asin</th>
-      <th>Search index</th>
-      <th>Price jp</th>
-      <th>Price us</th>
-      <th>Rank amazon</th>
-      <th>Check date</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:asin) %></th>
+      <th><%= model_class.human_attribute_name(:search_index) %></th>
+      <th><%= model_class.human_attribute_name(:price_jp) %></th>
+      <th><%= model_class.human_attribute_name(:price_us) %></th>
+      <th><%= model_class.human_attribute_name(:rank_amazon) %></th>
+      <th><%= model_class.human_attribute_name(:check_date) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @items.each do |item| %>
       <tr>
+        <td><%= link_to item.id, item_path(item) %></td>
         <td><%= item.name %></td>
         <td><%= item.asin %></td>
         <td><%= item.search_index %></td>
@@ -26,13 +28,21 @@
         <td><%= item.price_us %></td>
         <td><%= item.rank_amazon %></td>
         <td><%= item.check_date %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l item.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_item_path(item), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      item_path(item),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<br>
 
-<%= link_to 'New Item', new_item_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_item_path,
+            :class => 'btn btn-primary' %>
