--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,39 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Item -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @item.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @item.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:asin) %>:</strong></dt>
+  <dd><%= @item.asin %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:search_index) %>:</strong></dt>
+  <dd><%= @item.search_index %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:price_jp) %>:</strong></dt>
+  <dd><%= @item.price_jp %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:price_us) %>:</strong></dt>
+  <dd><%= @item.price_us %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:rank_amazon) %>:</strong></dt>
+  <dd><%= @item.rank_amazon %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:check_date) %>:</strong></dt>
+  <dd><%= @item.check_date %></dd>
+</dl>
 
-<p>
-  <strong>Asin:</strong>
-  <%= @item.asin %>
-</p>
-
-<p>
-  <strong>Search index:</strong>
-  <%= @item.search_index %>
-</p>
-
-<p>
-  <strong>Price jp:</strong>
-  <%= @item.price_jp %>
-</p>
-
-<p>
-  <strong>Price us:</strong>
-  <%= @item.price_us %>
-</p>
-
-<p>
-  <strong>Rank amazon:</strong>
-  <%= @item.rank_amazon %>
-</p>
-
-<p>
-  <strong>Check date:</strong>
-  <%= @item.check_date %>
-</p>
-
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              items_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_item_path(@item), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              item_path(@item),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
