modefy header link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,9 @@
         <a class="navbar-brand" href="#">AmazonPrice</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "show", "/items/"  %></li>
+            <li><%= link_to "insertJapan", "/items/insert_jp_data"  %></li>
+            <li><%= link_to "updateUS", "/items/update_us_price"  %></li>
           </ul>
         </div>
       </div>
