--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,6 +5,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:asin) %></th>
       <th><%= model_class.human_attribute_name(:search_index) %></th>
@@ -18,6 +19,7 @@
   <tbody>
     <% @items.each do |item| %>
       <tr>
+        <td><%= link_to item.id, item_path(item) %></td>
         <td><%= item.name %></td>
         <td><%= item.asin %></td>
         <td><%= item.search_index %></td>
